feat: Implement function get with router discount
- Get all discount by shop
- Get all product by shop and discount code
- Change form discount query dto (add more filter)
- Assign optional for Sorting in success response body
