# Ecommerce_Backend/src/base/common/types/response-body.types.ts
@@ -2,7 +2,7 @@ import { HttpStatusCode } from '~/base/common/enums'
 import { Pagination, Sorting } from '~/base/common/types'
 
 export type SuccessResponseBody<T> = T extends unknown[]
-  ? { data: T; meta: { pagination: Pagination; sorting: Sorting[] } }
+  ? { data: T; meta: { pagination: Pagination; sorting?: Sorting[] } }
   : { data: T }
 
 export type FailedResponseBody = {
