# Ecommerce_Backend/src/modules/Discount/router/discount.router.ts
@@ -5,6 +5,8 @@ import { DiscountController } from '~/modules/Discount/controllers'
 // /discounts
 const discountRouter = Router()
 
-discountRouter.post('/generate-discount-code', asyncHandler(DiscountController.GenerateDiscountCode))
+discountRouter.get('/products/discounts', asyncHandler(DiscountController.GetAllProductsByDiscountCodes))
+discountRouter.get('/discounts', asyncHandler(DiscountController.GetAllDiscountCodesForShop))
 
+discountRouter.post('/generate-discount-code', asyncHandler(DiscountController.GenerateDiscountCode))
 export { discountRouter }
